--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,8 @@ install_requires =
 	sdss-tree>=2.15.2
 	sdss-access>=0.2.3
 	sdsstools>=0.4.0
+	astropy>=4.3.1
+	astroquery>=0.4.3
 scripts =
 	bin/lvmdatasimulator
 
