--- a/setup.cfg
+++ b/setup.cfg
@@ -78,7 +78,7 @@ sections =
 	LOCALFOLDER
 default_section = THIRDPARTY
 known_first_party = lvmdatasimulator
-known_sdss_party =
+known_sdss =
 	sdssdb
 	sdsstools
 balanced_wrapping = true
