--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ install_requires =
 	sdsstools>=0.4.0
 	astropy>=4.3.1
 	astroquery>=0.4.3
+	spectres
 scripts =
 	bin/lvmdatasimulator
 
@@ -66,6 +67,7 @@ dev =
 	twine>=3.1.1
 	wheel>=0.33.6
 	sphinx>=3.0.0
+	spectres
 
 [isort]
 line_length = 79
