scipy added to requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ install_requires =
 	astropy>=4.3.1
 	astroquery>=0.4.3
 	spectres
+	scipy
 scripts =
 	bin/lvmdatasimulator
 
@@ -68,6 +69,7 @@ dev =
 	wheel>=0.33.6
 	sphinx>=3.0.0
 	spectres
+	scipy
 
 [isort]
 line_length = 79
