added pyphot to the requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ install_requires =
 	astroquery>=0.4.3
 	spectres
 	scipy
+	pyphot
 scripts =
 	bin/lvmdatasimulator
 
@@ -70,6 +71,7 @@ dev =
 	sphinx>=3.0.0
 	spectres
 	scipy
+	pyphot
 
 [isort]
 line_length = 79
