--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ install_requires =
 	spectres
 	scipy
 	pyphot
+	progressbar2
 scripts =
 	bin/lvmdatasimulator
 
@@ -72,6 +73,7 @@ dev =
 	spectres
 	scipy
 	pyphot
+	progressbar2
 
 [isort]
 line_length = 79
