added the dataclasses import

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ install_requires =
 	pyphot
 	progressbar2
 	os
+	dataclasses
 scripts =
 	bin/lvmdatasimulator
 
@@ -76,6 +77,7 @@ dev =
 	pyphot
 	progressbar2
 	os
+	dataclasses
 
 [isort]
 line_length = 79
