added astroplan to the requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ install_requires =
 	progressbar2
 	os
 	dataclasses
+	astroplan
 scripts =
 	bin/lvmdatasimulator
 
@@ -78,6 +79,7 @@ dev =
 	progressbar2
 	os
 	dataclasses
+	astroplan
 
 [isort]
 line_length = 79
