--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,8 @@ packages = find:
 package_dir =
 	= python
 install_requires =
+	matplotlib
+	numpy
 	sdss-tree>=2.15.2
 	sdss-access>=0.2.3
 	sdsstools>=0.4.0
