--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ install_requires =
 	dataclasses
 	astroplan
 	joblib
+	shapely
 scripts =
 	bin/lvmdatasimulator
 
@@ -82,6 +83,7 @@ dev =
 	dataclasses
 	astroplan
 	joblib
+	shapely
 
 [isort]
 line_length = 79
