--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ install_requires =
 	joblib
 	pyneb
 	shapely
+	sympy
 
 scripts =
 	bin/lvmdatasimulator
@@ -87,6 +88,7 @@ dev =
 	joblib
 	pyneb
 	shapely
+	sympy
 
 [isort]
 line_length = 79
