Fix problems with python<3.8 and nebulae outside FOV; add improvements in extinction calculations

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ install_requires =
 	astroplan
 	joblib
 	shapely
+	backports-cached-property
 scripts =
 	bin/lvmdatasimulator
 
@@ -84,6 +85,7 @@ dev =
 	astroplan
 	joblib
 	shapely
+	backports-cached-property
 
 [isort]
 line_length = 79
