Using multiprocessing for parallelization

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ install_requires =
 	shapely
 	sympy
 	backports-cached-property
+	multiprocessing
 scripts =
 	bin/lvmdatasimulator
 
@@ -88,6 +89,7 @@ dev =
 	shapely
 	sympy
 	backports-cached-property
+	multiprocessing
 
 [isort]
 line_length = 79
