--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,11 +37,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install .
 
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --show-source --statistics --ignore E126,W504,E501 
+    # - name: Lint with flake8
+    #   run: |
+    #     pip install flake8
+    #     # stop the build if there are Python syntax errors or undefined names
+    #     flake8 . --count --show-source --statistics --ignore E126,W504,E501
 
     # - name: Lint with isort
     #   run: |
