Change format of the Cloudy models; add functions to explore their content

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,8 @@ install_requires =
 	shapely
 	sympy
 	backports-cached-property
+	pyneb
+	pycloudy
 
 scripts =
 	bin/lvmdatasimulator
@@ -89,6 +91,8 @@ dev =
 	shapely
 	sympy
 	backports-cached-property
+	pyneb
+	pycloudy
 
 [isort]
 line_length = 79
