--- a/python/lvmdatasimulator/etc/lvmdatasimulator.yml
+++ b/python/lvmdatasimulator/etc/lvmdatasimulator.yml
@@ -2,19 +2,19 @@
 
 nprocess: 8  # number of processes for parallelization
 
-cloudy_models_name: 'LVM_cloudy_sphere_models.fits'  # Name for the pre-computed emission-line models to be used
+cloudy_models_name: 'LVM_cloudy_models.fits'         # Name for the pre-computed emission-line models to be used
                                                      # (should be stored in 'data' directory)
 continuum_models_name: 'LVM_continuum_models.fits'   # Name for the pre-computed continuum models to be used
                                                      # (should be stored in 'data' directory)
 stellar_library_name: 'pollux_resampled_v0.fits'     # Name for the library of stellar spectra
                                                      # (should be stored in 'data' directory)
 cloudy_default_params:  # parameters for the Cloudy model to be used by default
-    id: 983
+    id: 'Cloud_366'
+    Geometry: 'Cloud'
     Z: 0.4
-    qH: 50.
-    Teff: 50000.
     nH: 100.
-    Rin: 0.01
+    Teff: 35000.
+    LogLsun: 5.5
 
 data_dir: "data"  # Path to the model grids etc. (relative to the ROOT of package unless it begins with / or \\ or ./)
 
