--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = sdss-lvmdatasimulator
-version = 0.1.0dev.0
+version = 0.9.0
 author = Oleg Egorov, Enrico Congiu
 author_email = oleg.egorov@uni-heidelberg.de
 description = Simulator of LVM data for testing DRP and DAP
