Adding Allen08 Mappings models to  the simulator

--- a/python/lvmdatasimulator/etc/lvmdatasimulator.yml
+++ b/python/lvmdatasimulator/etc/lvmdatasimulator.yml
@@ -4,6 +4,8 @@ nprocess: 8  # number of processes for parallelization
 
 cloudy_models_name: 'LVM_cloudy_models.fits'         # Name for the pre-computed emission-line models to be used
                                                      # (should be stored in 'data' directory)
+mappings_models_name: 'LVM_mappings_models.fits'       # Name for the pre-computed MAPPINGS models to be used
+                                                     # (should be stored in 'data' directory)
 continuum_models_name: 'LVM_continuum_models.fits'   # Name for the pre-computed continuum models to be used
                                                      # (should be stored in 'data' directory)
 stellar_library_name: 'pollux_resampled_v0.fits'     # Name for the library of stellar spectra
@@ -15,6 +17,14 @@ cloudy_default_params:  # parameters for the Cloudy model to be used by default
     nH: 100.
     Teff: 35000.
     LogLsun: 5.5
+
+mappings_default_params:  # parameters for the MAPPINGS model to be used by default
+    id: 'Shock_1681'
+    abundid: 2
+    preshck_dens: 1
+    mag_fld: 1
+    shck_vel: 100
+    model_type: 'shock'
 
 data_dir: "data"  # Path to the model grids etc. (relative to the ROOT of package unless it begins with / or \\ or ./)
 
