Adding mappings models

--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,7 @@ ENV/
 # huge data directory
 data/*.fits
 !data/LVM_continuum_models.fits
+!data/LVM_mappings_models.fits
 run/*
 
 # do not upload docs yet
