--- a/python/lvmdatasimulator/etc/lvmdatasimulator.yml
+++ b/python/lvmdatasimulator/etc/lvmdatasimulator.yml
@@ -37,7 +37,7 @@ work_dir: "./"  # Path to the directory where the computation results will be sa
 sim2d_params:
     nfib_per_block: 36  # Number of fibers per block on CCD
     null_fiber_offset: 36.0  # Y-offset of the first fiber on CCD TODO: not sure if it is needed
-    psf_rootname: "focus_lvm_"  # Root name for files with PSF measurements in each channel
+    psf_rootname: "focus_lvm"  # Root name for files with PSF measurements in each channel
     fibers_ccd_map_name: "plugmap.dat"  # Name of the file defining the order of the fibers on slit/CCD
     fibers_pack_name: 'opFibers.par'  # Name of the file defining how the fibers packed #TODO: or not?
     ccd_properties: 'ccd_properties.dat'  # Name of the file defining the properties of CCD (bias, npix, gain etc)
