--- a/python/lvmdatasimulator/etc/lvmdatasimulator.yml
+++ b/python/lvmdatasimulator/etc/lvmdatasimulator.yml
@@ -37,6 +37,9 @@ work_dir: "./"  # Path to the directory where the computation results will be sa
 sim2d_params:
     nfib_per_block: 36  # Number of fibers per block on CCD
     null_fiber_offset: 36.0  # Y-offset of the first fiber on CCD TODO: not sure if it is needed
+    lines_curvature: [5, 120] # Parameters defining the lines curvature (same for all CCDs and channels):
+                                 # radius/ccd_sise_y for the position of the 1st pixels in each fibers,
+                                 # and position along dispersion axis of the 1st pixel in the central fiber
     psf_rootname: "focus_lvm"  # Root name for files with PSF measurements in each channel
     fibers_ccd_map_name: "plugmap.dat"  # Name of the file defining the order of the fibers on slit/CCD
     fibers_pack_name: 'opFibers.par'  # Name of the file defining how the fibers packed #TODO: or not?
