Added curvature of the fibers and other minor improvements

--- a/python/lvmdatasimulator/etc/lvmdatasimulator.yml
+++ b/python/lvmdatasimulator/etc/lvmdatasimulator.yml
@@ -40,6 +40,12 @@ sim2d_params:
     lines_curvature: [5, 120] # Parameters defining the lines curvature (same for all CCDs and channels):
                                  # radius/ccd_sise_y for the position of the 1st pixels in each fibers,
                                  # and position along dispersion axis of the 1st pixel in the central fiber
+    trace_curvature: [0, 0, 0, 0, 8e-10, 8e-10, 2060, 2040] # Parameters defining the curvature of the
+                                # fibers traces on CCD curvature (same for all CCDs and channels)
+                                # Curvature is defined as dy = a(x-xc)**2+b(x-xc),
+                                # where a = a2*(y-yc)**2+a1*(y-yc)+a0 and b = b2*(y-yc)**2+b1*(y-yc)+b0
+                                # List contains [a0, b0, a2, b2, a1, b1, xc, yc]
+                                # TODO: requires calibration based on lab data
     psf_rootname: "focus_lvm"  # Root name for files with PSF measurements in each channel
     fibers_ccd_map_name: "plugmap.dat"  # Name of the file defining the order of the fibers on slit/CCD
     fibers_pack_name: 'opFibers.par'  # Name of the file defining how the fibers packed #TODO: or not?
