updating version number

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = sdss-lvmdatasimulator
-version = 0.9.2
+version = 1.0.0
 author = Oleg Egorov, Enrico Congiu
-author_email = oleg.egorov@uni-heidelberg.de
+author_email = oleg.egorov@uni-heidelberg.de, econgiu@eso.org
 description = Simulator of LVM data for testing DRP and DAP
 url = https://github.com/sdss/lvmdatasimulator
 project_urls =
