Fix issue with three fibers get lost in 2D simulations + some clean up of the outpu fits headers and the code

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ install_requires =
 	backports-cached-property
 	pyneb
 	pycloudy
+	tqdm
 
 scripts =
 	bin/lvmdatasimulator
@@ -91,6 +92,7 @@ dev =
 	backports-cached-property
 	pyneb
 	pycloudy
+	tqdm
 
 [isort]
 line_length = 79
