Test updated config

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,22 +17,40 @@ classifiers =
 	Intended Audience :: Science/Research
 	Natural Language :: English
 	Operating System :: OS Independent
-	Programming Language :: Python
-	Programming Language :: Python :: 3.6
-	Programming Language :: Python :: 3.7
-	Programming Language :: Python :: 3.8
+	Programming Language :: Python :: 3
 	Topic :: Documentation :: Sphinx
 	Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
 zip_safe = False
-python_requires = >=3.6
+python_requires = >=3.7
 packages = find:
 package_dir =
 	= python
 install_requires =
+;    numpy==1.16.0; python_version=='3.6' and platform_system=='AIX'
+    numpy==1.16.0; python_version=='3.7' and platform_system=='AIX'
+    numpy==1.23.3; python_version=='3.9' and platform_system=='OS400'
+;    numpy==1.19.2; python_version=='3.6' and platform_machine=='aarch64' and platform_python_implementation != 'PyPy'
+    numpy==1.19.2; python_version=='3.7' and platform_machine=='aarch64' and platform_python_implementation != 'PyPy'
+    numpy==1.19.2; python_version=='3.8' and platform_machine=='aarch64' and platform_python_implementation != 'PyPy'
+	numpy==1.21.0; python_version=='3.7' and platform_machine=='arm64' and platform_system=='Darwin'
+    numpy==1.21.0; python_version=='3.8' and platform_machine=='arm64' and platform_system=='Darwin'
+    numpy==1.21.0; python_version=='3.9' and platform_machine=='arm64' and platform_system=='Darwin'
+	numpy==1.17.5; python_version=='3.8' and platform_machine=='s390x' and platform_python_implementation != 'PyPy'
+    numpy==1.22.2; platform_machine=='loongarch64' and python_version<'3.11'
+;    numpy==1.13.3; python_version=='3.6' and platform_machine not in 'aarch64|loongarch64' and platform_system!='AIX' and platform_python_implementation != 'PyPy'
+    numpy==1.14.5; python_version=='3.7' and platform_machine not in 'arm64|aarch64|loongarch64' and platform_system!='AIX' and platform_python_implementation != 'PyPy'
+    numpy==1.17.3; python_version=='3.8' and platform_machine not in 'arm64|aarch64|s390x|loongarch64' and platform_python_implementation != 'PyPy'
+    numpy==1.19.3; python_version=='3.9' and platform_system not in 'OS400' and platform_machine not in 'arm64|loongarch64' and platform_python_implementation != 'PyPy'
+    numpy==1.21.6; python_version=='3.10' and platform_machine!='loongarch64' and platform_python_implementation != 'PyPy'
+    numpy==1.23.2; python_version=='3.11' and platform_python_implementation != 'PyPy'
+;    numpy==1.19.0; python_version=='3.6' and platform_machine!='loongarch64' and platform_python_implementation=='PyPy'
+    numpy==1.20.0; python_version=='3.7' and platform_machine!='loongarch64' and platform_python_implementation=='PyPy'
+    numpy==1.22.2; python_version=='3.8' and platform_machine!='loongarch64' and platform_python_implementation=='PyPy'
+    numpy; python_version>='3.12'
+    numpy; python_version>='3.9' and platform_python_implementation=='PyPy'
 	matplotlib
-	numpy
 	sdss-tree>=2.15.2
 	sdss-access>=0.2.3
 	sdsstools>=0.4.0
@@ -46,7 +64,7 @@ install_requires =
 	joblib
 	shapely
 	sympy
-	backports-cached-property
+	backports-cached-property; python_version=='3.7'
 	pyneb
 	pycloudy
 	tqdm
@@ -81,18 +99,9 @@ dev =
 	twine>=3.1.1
 	wheel>=0.33.6
 	sphinx>=3.0.0
-	spectres
-	scipy
-	pyphot
-	dataclasses
 	astroplan
-	joblib
 	shapely
 	sympy
-	backports-cached-property
-	pyneb
-	pycloudy
-	tqdm
 
 [isort]
 line_length = 79
