--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ dependencies = [
 #dynamic = ["version"]
 
 [project.optional-dependencies]
-pdf = ["ReportLab>=1.2", "RXP"]
+#pdf = ["ReportLab>=1.2", "RXP"]
 rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]
 
 [tool.setuptools.packages.find]
@@ -55,6 +55,29 @@ where = ["python"]
 
 [tool.setuptools.package-data]
 mypkg = ["etc/*"]
+
+[tool.isort]
+line_length = 79
+sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'SDSS', 'FIRSTPARTY', 'LOCALFOLDER']
+default_section = 'THIRDPARTY'
+known_first_party = 'lvmdatasimulator'
+known_sdss = ['sdssdb','sdsstools']
+balanced_wrapping = true
+include_trailing_comma = false
+lines_after_imports = 2
+use_parentheses = true
+
+[tool.flake8]
+ignore = ['H101', 'E722', 'W504', 'W505']
+per-file-ignores = ["*/__init__.py:E,W"]
+max-line-length = 99
+
+[tool.pytest]
+adopts = '--cov lvmdatasimulator --cov-report html -W ignore'
+
+[tool.coverage]
+run = {branch = true, include = "python/lvmdatasimulator/*", omit = ["*/utils/*.py","*/__init__.py"]}
+
 
 [project.urls]
 homepage = "https://github.com/sdss/lvmdatasimulator"
