fixing joblib to 1.2.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ install_requires =
 	pyphot
 	dataclasses
 	astroplan
-	joblib
+	joblib==1.2.0
 	shapely
 	sympy
 	backports-cached-property
@@ -86,7 +86,7 @@ dev =
 	pyphot
 	dataclasses
 	astroplan
-	joblib
+	joblib==1.2.0
 	shapely
 	sympy
 	backports-cached-property
