fixing numpy to 1.20

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ package_dir =
 	= python
 install_requires =
 	matplotlib
-	numpy
+	numpy==1.20
 	sdss-tree>=2.15.2
 	sdss-access>=0.2.3
 	sdsstools>=0.4.0
